--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <meta name="author" content="William Zhong">
     <meta name="robots" content="index, follow">
     
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="shortcut icon" href="favicon.svg">
+    
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="William Zhong - Professional Portfolio">
     <meta property="og:description" content="William Zhong - Professional Portfolio. Experienced developer showcasing skills, projects, and expertise in web development and technology.">
