--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <title>William Zhong</title>
     
     <!-- External CSS -->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
     <!-- Menu Bar -->
