--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
         <span>Xcode</span>
     </div>
     
-    <div class="desktop-icon icon-github" ondblclick="window.open('https://github.com', '_blank')">
-        <img src="placeholder.png" alt="GitHub">
+    <div class="desktop-icon icon-github" ondblclick="window.open('https://github.com/genesisband', '_blank')">
+        <img src="github.png" alt="GitHub">
         <span>GitHub</span>
     </div>
 
@@ -98,28 +98,25 @@
         </div>
         <div class="window-content">
             <div class="about-content">
-                <div class="profile-section">
-                    <div class="profile-avatar"></div>
-                    <div>
-                        <div class="profile-name">William Zhong</div>
-                        <div class="profile-title">Full-Stack Developer</div>
-                    </div>
+                <div class="about-left-pane">
+                    <img src="pfp.jpg" alt="William Zhong" class="profile-avatar">
                 </div>
-                <div class="info-section">
+                <div class="about-right-pane">
+                    <div class="profile-name">William Zhong</div>
+                    <div class="profile-title">Full-Stack Developer</div>
                     <p>Welcome to my interactive portfolio, designed with the look and feel of Classic Mac OS.</p>
                     <p>This project showcases my skills in front-end development, attention to detail, and passion for retro UIs.</p>
-                    <a href="https://github.com" class="info-item" target="_blank">
-                        <div class="info-icon">🐙</div>
-                        <div class="info-text">GitHub</div>
-                    </a>
-                    <a href="https://linkedin.com" class="info-item" target="_blank">
-                        <div class="info-icon">💼</div>
-                        <div class="info-text">LinkedIn</div>
-                    </a>
-                    <a href="mailto:william.zhong@example.com" class="info-item">
-                        <div class="info-icon">📧</div>
-                        <div class="info-text">Email Me</div>
-                    </a>
+                    <div class="info-section">
+                        <a href="https://scholar.google.com/citations?user=TR-Qug0AAAAJ&hl=en" class="info-item" target="_blank">
+                            <div class="info-text">Publications</div>
+                        </a>
+                        <a href="https://www.linkedin.com/in/williamzhong42/" class="info-item" target="_blank">
+                            <div class="info-text">LinkedIn</div>
+                        </a>
+                        <a href="mailto:willyzhonka@gmail.com" class="info-item">
+                            <div class="info-text">Email Me</div>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
