--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
     <link rel="stylesheet" href="styles.v2.css">
 </head>
 <body>
+    <!-- Watermark -->
+    <div class="watermark">William Zhong 2025</div>
+    
     <!-- Menu Bar -->
     <div class="menu-bar">
         <div class="menu-item apple-menu"></div>
