--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </div>
     
     <div class="desktop-icon icon-photoshop" data-action="window" data-window="pokemon-window">
-        <img src="placeholder.png" alt="Pokémon">
+        <img src="pokemon.png" alt="Pokémon">
         <span>Pokémon</span>
     </div>
     
