--- a/index.html
+++ b/index.html
@@ -497,23 +497,13 @@ You can type stuff here!</textarea>
             // Prevent scrolling on desktop background
             e.preventDefault();
         }, { passive: false });
-        
-        document.addEventListener('scroll', function(e) {
-            // Prevent any scrolling
-            e.preventDefault();
-            window.scrollTo(0, 0);
-        }, { passive: false });
-        
-        // Prevent wheel scrolling
-        document.addEventListener('wheel', function(e) {
-            // Allow scrolling only in specific elements
-            if (e.target.closest('.notes-textarea') || 
-                e.target.closest('.window-content')) {
-                return;
-            }
-            // Prevent scrolling on desktop background
-            e.preventDefault();
-        }, { passive: false });
+
+        // Prevent touchmove from propagating out of window-content (lock page, allow scroll in window)
+        document.querySelectorAll('.window-content').forEach(function(content) {
+            content.addEventListener('touchmove', function(e) {
+                e.stopPropagation();
+            }, { passive: false });
+        });
     </script>
 </body>
 </html> 
