--- a/index.html
+++ b/index.html
@@ -138,6 +138,8 @@
 - JS, TS: React
 - Java, C/C++
 
+Double click on app icons to open them. Click the Apple icon to open the About window again if closed.
+
 You can type stuff here!</textarea>
         </div>
     </div>
