--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     <div class="profile-name">William Zhong</div>
                     <div class="profile-title">Yale CS + Math</div>
                     <p>Welcome to my website. I am a big fan of retro computing and design.</p>
-                    <p>I am also a passionate ML researcher and developer interested in robotics. Outside of ML, I have worked on a variety of full-stack projects.</p>
+                    <p>I am also a passionate ML/robotics researcher and developer. Outside of ML, I have worked on a variety of full-stack projects.</p>
                     <div class="info-section">
                         <a href="https://scholar.google.com/citations?user=TR-Qug0AAAAJ&hl=en" class="info-item" target="_blank">
                             <div class="info-text">Publications</div>
