--- a/index.html
+++ b/index.html
@@ -475,6 +475,9 @@ You can type stuff here!</textarea>
             }
 
             openWindow('pokemon-window');
+
+            // Bring About window to front after others
+            openWindow('about-window');
         });
 
         // Add window focus effect
