--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     
     <div class="desktop-icon icon-mail" data-action="url" data-url="https://arxiv.org/pdf/2502.09790">
         <img src="exominer.png" alt="ExoMiner">
-        <span>exominer</span>
+        <span>exominer.pdf</span>
     </div>
     
     <div class="desktop-icon icon-itunes" data-action="url" data-url="https://open.spotify.com/playlist/0S142yKxglv6znajJMTcuB?si=2a4ddec716ae4433&pt=a61b14f96b33935f9f798f81a5782ffe">
